# fasttext-parallel

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pr.yml
data/: train.csv
python/fasttext_parallel/: __init__.py  fasttext_parallel.pyi
src/: lib.rs
test/: fasttext_labels.py  test_script.py
