[package]
name = "fasttext-parallel"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "fasttext_parallel"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
fasttext = "0.7.0"
rayon = "1.6.1"
log = "0.4.17"
pyo3-log = "0.7.0"
numpy = "0.17.2"
ndarray = { version = "0.15" }
crossbeam = "0.8.2"

[package.metadata.maturin]
python-source = "python"
